fix tags on mobile

--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -211,7 +211,7 @@
     color: #8c0461;
     font-family: namefont;
     font-size: 10vw;
-    font-weight: 600;
+    font-weight: 300;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -229,6 +229,7 @@
     justify-content: center;
     font-size: 4vw;
     font-family: codefont;
+    font-weight: 300;
     color: #06617a;
     cursor: pointer;
     user-select: none;
@@ -247,5 +248,6 @@
   }
   .blogPageDropdownButton {
     font-size: 3.25vw;
+    text-align: center;
   }
 }
